2009-08-20  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Update copyright notices.

	* programs/benchmarks/livermore/k2-alt.c,
	* programs/benchmarks/livermore/k4-alt.c,
	* programs/demo/bitblt.c,
	* programs/demo/keyblit.c,
	* tools/lib/host-host-ptl/slrt.c,
	* tools/lib/host-host-seqc/lib_main.c,
	* tools/lib/host-host-seqc/load.c,
	* tools/lib/host-host-seqc/main.c,
	* tools/lib/host-host-seqc/slrt.c,
	* tools/lib/mtalpha-sim/main.c: Update header.

2009-08-20  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	One more little step towards C: support `main'.
	
	* tools/lib/mtalpha-sim/slrt.s: Print the return value of `main'
	before exiting, if it is not zero.

	* tools/tests/8_funs/main1.c,
	* tools/tests/8_funs/main2.c,	
	* tools/tests/8_funs/x_main.c: New. These check that the compiler
	supports `main' decently.

2009-08-19  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	* tools/tests/8_funs/f8.c: Use types correctly.

2009-08-19  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Merge the following changes.

	2009-08-19  Raphael 'kena' Poss  <r.c.poss@uva.nl>
	
	* tools/lib/mtalpha-sim/callgate.s: Simplify. 

	2009-08-19  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	More support for function calls.
	
	* tools/bin/spp: Try hard to avoid spilling "preserved" registers
	to the frame. Try harder to remove frame setup and restore upon
	end of thread.

	* tools/lib/t-pppalpha/slimpl.m4: Pass function calls directly.
	
	2009-08-19  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Reduce support to function calls only.

	The previous changes would also rewrite calls to the divide
	routines; but this is not needed any more since the decision was
	made separately to implement a hardware integer divide instead.
	
	* tools/bin/spp: Reinstate the use of t10 and t11 for parameter
	passing.

	* tools/lib/t-pppalpha/include/sl_support.h: Lower the maximum
	number of locals again.

	2009-08-18  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Preliminary support for rewriting function calls in assembly.
	
	* tools/bin/spp,